--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.7.0",
+    "nodemailer": "^6.9.13",
     "react-icons": "^5.2.1"
   }
 }
